Klassenzimmer Notiz hinzugefügt.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Git Unterricht WDD412</h1>
+        <h1>Git Unterricht WDD412 im Klassenzimmer 2.2</h1>
     </header>
     <p>Hallo!</p>
 </body>
