--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>Git Unterricht WDD412 im Klassenzimmer 2.2</h1>
     </header>
     <p>Hallo!</p>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </body>
 </html>
