--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Unser git Unterricht</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" />
 </head>
 <body>
     <header>
